--- a/Coffee store/show_product.html
+++ b/Coffee store/show_product.html
@@ -168,21 +168,30 @@
         }
 
         .notification {
-            padding: 10px;
-            margin: 20px;
-            border-radius: 5px;
-            display: none;
-        }
+    position: fixed; /* Fixed at the top */
+    top: 0;
+    left: 50%; /* Center horizontally */
+    transform: translateX(-50%);
+    width: 100%; /* Full width */
+    max-width: 500px; /* Limit width for readability */
+    text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1000; /* Ensure it appears above other content */
+    display: none; /* Hidden by default */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
 
-        .notification.error {
-            background-color: #e74c3c;
-            color: white;
-        }
+.notification.success {
+    background-color: #2ecc71;
+    color: white;
+}
 
-        .notification.success {
-            background-color: #2ecc71;
-            color: white;
-        }
+.notification.error {
+    background-color: #e74c3c;
+    color: white;
+}
+
     </style>
 </head>
 <body>
@@ -276,39 +285,50 @@
                 .catch(error => console.error('Error fetching product data:', error));
 
             // Add comment functionality
-            document.getElementById('submit-comment').addEventListener('click', function () {
-                const userId = parseInt(localStorage.getItem('userid')) || 0;
-                const productId = parseInt(localStorage.getItem('productId')) || 0;
-                if (userId && document.getElementById('comment-text').value && document.querySelector('input[name="rating"]:checked')) {
-                    const commentData = {
-                        user_id: userId,
-                        product_id: productId,
-                        rating: document.querySelector('input[name="rating"]:checked').value,
-                        comment: document.getElementById('comment-text').value
-                    };
+        document.getElementById('submit-comment').addEventListener('click', function () {
+            const userId = parseInt(localStorage.getItem('userid')) || 0;
+            const productId = parseInt(localStorage.getItem('productId')) || 0;
 
-                    fetch('http://127.0.0.1:5000/api/add_comment', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify(commentData)
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.success) {
-                            alert('Comment added successfully!');
-                            document.getElementById('comment-text').value = "";
-                            location.reload();
-                        } else {
-                            alert('Error adding comment');
-                        }
-                    })
-                    .catch(error => console.error('Error:', error));
+            if (userId && productId && document.getElementById('comment-text').value.trim() && document.querySelector('input[name="rating"]:checked')) {
+                const commentData = {
+                user_id: userId,
+                product_id: productId,
+                rating: parseInt(document.querySelector('input[name="rating"]:checked').value),
+                comment: document.getElementById('comment-text').value.trim()
+            };
+
+            const submitButton = document.getElementById('submit-comment');
+            submitButton.disabled = true; // Disable button during fetch
+
+            fetch(`http://127.0.0.1:5000/api/product/add_comment/${productId}`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(commentData)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    alert('Comment added successfully!');
+                    document.getElementById('comment-text').value = "";
+                    location.reload();
                 } else {
-                    alert("Please login first or provide a comment and rating.");
+                    alert(`Error: ${data.error || 'Failed to add comment'}`);
                 }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('An unexpected error occurred. Please try again.');
+            })
+            .finally(() => {
+                submitButton.disabled = false; // Re-enable button
             });
+            } else {
+                alert("Please login first or provide a valid comment and rating.");
+            }
+        });
+
         });
 
         // Function to add an item to the cart
