--- a/Coffee store/dashboard.html
+++ b/Coffee store/dashboard.html
@@ -235,9 +235,10 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="vendor_products.html">Products</a></li>
                 <li><a href="vendor_orders.html">Orders</a></li>
-                <li><a href="#">Account</a></li>
+                <li><a href="login_vendor.html">Account</a></li>
+                <li><a href="vendor_add_sale.html">sale</a></li>
                 <li><a href="#" onclick="logout()">Logout</a></li>
             </ul>
         </nav>
